[package]
name = "amari-info-geom"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Information geometry and statistical manifolds"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["information-geometry", "statistics", "manifolds", "fisher-metric", "mathematics"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
amari-core = { path = "../amari-core", version = "0.8" }
num-traits = { workspace = true }
thiserror = { workspace = true }
approx = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["std", "high-precision"]
std = ["amari-core/std"]
high-precision = ["amari-core/high-precision"]