[package]
name = "amari-info-geom"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Information geometry and statistical manifolds"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["information-geometry", "statistics", "manifolds", "fisher-metric", "mathematics"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
amari-core = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
approx = { workspace = true }

# GPU acceleration dependencies
bytemuck = { version = "1.14", features = ["derive"], optional = true }
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"], optional = true }

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "gpu_information_geometry"
required-features = ["gpu"]

[features]
default = ["std", "high-precision"]
std = ["amari-core/std"]
high-precision = ["amari-core/high-precision"]
gpu = ["bytemuck", "wgpu", "pollster", "futures", "tokio"]