[package]
name = "amari-measure"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Measure-theoretic foundations for geometric algebra - integration, probability measures, and analysis on multivector spaces"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["measure-theory", "integration", "geometric-algebra", "probability", "analysis"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
amari-core = { workspace = true, features = ["std", "phantom-types"] }
thiserror = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, optional = true }

# Optional: Formal verification with Creusot
creusot-contracts = { version = "0.6", optional = true }

[dev-dependencies]
approx = { workspace = true }
proptest = "1.4"
criterion = "0.5"

[features]
default = ["std"]
std = ["amari-core/std"]
serde = ["dep:serde", "amari-core/serde"]
formal-verification = ["creusot-contracts"]
