[package]
name = "amari-network"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Geometric network analysis using Clifford algebra and tropical algebra"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["network-analysis", "graph-theory", "geometric-algebra", "tropical-algebra", "clifford"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
amari-core = { workspace = true }
amari-tropical = { workspace = true }
amari-dual = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
nalgebra = { workspace = true }

# Formal verification (requires nightly)
creusot-contracts = { version = "0.6", optional = true }

[dev-dependencies]
approx = { workspace = true }
criterion = "0.5"

[features]
default = ["std"]
std = []
serde = ["dep:serde", "amari-core/serde", "amari-tropical/serde"]

# Phantom types for compile-time verification (works on stable)
phantom-types = []
# Formal verification with Creusot (requires nightly)
formal-verification = ["creusot-contracts", "phantom-types"]
contracts = ["formal-verification"]

# Examples demonstrating different aspects of geometric network analysis
[[example]]
name = "basic_network"
path = "examples/basic_network.rs"

[[example]]
name = "community_detection"
path = "examples/community_detection.rs"

[[example]]
name = "information_diffusion"
path = "examples/information_diffusion.rs"

[[example]]
name = "tropical_pathfinding"
path = "examples/tropical_pathfinding.rs"

[[example]]
name = "geometric_analysis"
path = "examples/geometric_analysis.rs"

