[package]
name = "amari-topology"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Topological tools for geometric structures - homology, persistent homology, Morse theory, and manifold analysis"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["topology", "homology", "persistent-homology", "morse-theory", "geometric-algebra"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
amari-core = { workspace = true, features = ["std", "phantom-types"] }
amari-calculus = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = "1.4"
criterion = "0.5"

[features]
default = ["std"]
std = ["amari-core/std"]
parallel = ["dep:rayon"]

[dependencies.rayon]
version = "1.8"
optional = true
