[package]
name = "amari-tropical"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Tropical (max-plus) algebra implementation"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["tropical-algebra", "max-plus", "semiring", "mathematics", "optimization"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
amari-core = { path = "../amari-core", version = "0.8.2" }
num-traits = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
criterion = "0.5"

[features]
default = ["std", "high-precision"]
std = []
serialize = ["serde"]
high-precision = ["amari-core/high-precision"]
formal-verification = ["amari-core/formal-verification"]
contracts = ["formal-verification"]