[package]
name = "amari-tropical"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Tropical (max-plus) algebra implementation"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["tropical-algebra", "max-plus", "semiring", "mathematics", "optimization"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
amari-core = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
bytemuck = { version = "1.0", features = ["derive"], optional = true }
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
approx = { workspace = true }
criterion = "0.5"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }

[[bench]]
name = "tropical_benchmarks"
harness = false

[features]
default = ["std", "high-precision", "phantom-types"]
std = []
serialize = ["serde"]
gpu = ["bytemuck", "wgpu", "pollster", "futures"]
high-precision = ["amari-core/high-precision"]
native-precision = ["amari-core/native-precision"]
wasm-precision = ["amari-core/wasm-precision"]
phantom-types = ["amari-core/phantom-types"]
formal-verification = ["amari-core/formal-verification"]
contracts = ["formal-verification"]