[package]
name = "amari-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for Amari mathematical computing library - geometric algebra, tropical algebra, automatic differentiation, fusion systems, and information geometry"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["wasm", "webassembly", "geometric-algebra", "tropical-algebra", "autodiff"]
categories = ["mathematics", "science", "wasm", "web-programming"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
nalgebra = { workspace = true }

# Amari dependencies - now WASM-compatible by default
# Note: high-precision now uses pure Rust dashu-float (WASM-compatible)
# Native users can opt-in to native-precision for rug backend
amari-core = { workspace = true, features = ["phantom-types"] }
amari-network = { workspace = true, features = ["high-precision"] }
amari-tropical = { workspace = true }
amari-dual = { workspace = true }
amari-relativistic = { workspace = true, features = ["phantom-types"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Performance",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false