[package]
name = "amari-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for Amari mathematical computing library - geometric algebra, tropical algebra, automatic differentiation, measure theory, fusion systems, and information geometry"
repository = "https://github.com/justinelliottcobb/Amari"
homepage = "https://github.com/justinelliottcobb/Amari"
keywords = ["wasm", "webassembly", "geometric-algebra", "tropical-algebra", "autodiff"]
categories = ["mathematics", "science", "wasm", "web-programming"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
nalgebra = { workspace = true }
fastrand = "2.0"

# Amari dependencies - now WASM-compatible by default
# Note: high-precision now uses pure Rust dashu-float (WASM-compatible)
# Native users can opt-in to native-precision for rug backend
amari-core = { path = "../amari-core", features = ["phantom-types"] }
amari-network = { path = "../amari-network", features = ["high-precision"] }
amari-tropical = { path = "../amari-tropical" }
amari-dual = { path = "../amari-dual" }
amari-fusion = { path = "../amari-fusion" }
amari-holographic = { path = "../amari-holographic" }
amari-automata = { path = "../amari-automata" }
amari-info-geom = { path = "../amari-info-geom" }
amari-enumerative = { path = "../amari-enumerative" }
amari-relativistic = { path = "../amari-relativistic", features = ["phantom-types"] }
amari-optimization = { path = "../amari-optimization", features = ["wasm", "linalg"] }
amari-measure = { path = "../amari-measure" }
amari-calculus = { path = "../amari-calculus" }
amari-probabilistic = { path = "../amari-probabilistic" }
amari-functional = { path = "../amari-functional" }
amari-topology = { path = "../amari-topology" }

# Additional dependencies for v0.9.4 complete WASM coverage
num-rational = "0.4"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Performance",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false